sections on classes and terms git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8499 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/case.bib
+++ b/doc/case.bib
@@ -865,3 +865,52 @@ title = {An Overview of the {P}rogramatica ToolSet},
 year = {2004} 
 }
 
+@Article{journals/jfp/Faxen02,
+  title =	"A static semantics for Haskell",
+  author =	"Karl-Filip Fax{\'e}n",
+  journal =	"J. Funct. Program",
+  year = 	"2002",
+  number =	"4\&5",
+  volume =	"12",
+  bibdate =	"2004-03-19",
+  bibsource =	"DBLP,
+		 http://dblp.uni-trier.de/db/journals/jfp/jfp12.html#Faxen02",
+  pages =	"295--357",
+}
+
+
+@Misc{oai:CiteSeerPSU:71374,
+  title =	"A Dynamic Semantics for Haskell",
+  author =	"Kevin Hammond and Cordelia Hall",
+  year = 	"1992",
+  month =	oct # "~20",
+  abstract =	"This paper defines a dynamic semantics for the
+		 functional programming language Haskell. The semantics
+		 defines the meaning of expressions, modules and
+		 programs, including all nonoptional I/O requests. All
+		 constructs in the Haskell language are considered. We
+		 use the same natural semantics style as the definition
+		 of Standard ML. For brevity, we assume that the
+		 translations specified by the Wadler/Peyton Jones
+		 static semantics have been performed, and base our
+		 source language on the target language of the static
+		 semantics. 1 Introduction This paper defines the
+		 dynamic semantics of the full Haskell language [HW90,
+		 HJW91, HJW92]. The dynamic semantics is complementary
+		 to the existing static semantics for Haskell [JW92] in
+		 two respects: firstly it defines the meaning of the
+		 second-order polymorphic lambda-calculus which is
+		 synthesised by that semantics; secondly it is defined
+		 using a natural semantic form, where meaning is
+		 expressed through judgement rules. This corresponds to
+		 the type infe...",
+  citeseer-references = "oai:CiteSeerPSU:331052",
+  bibsource =	"OAI-PMH server at cs1.ist.psu.edu",
+  language =	"en",
+  oai =  	"oai:CiteSeerPSU:71374",
+  rights =	"unrestricted",
+  URL =  	"http://citeseer.ist.psu.edu/71374.html;
+		 http://www.softlab.ntua.gr/~nickie/haskell/papers/dynamic-semantics.ps.gz",
+}
+
+
