typo git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8503 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/hs2isa.tex
+++ b/doc/hs2isa.tex
@@ -596,7 +596,7 @@ that Haskell exhibits due to the presence of the $seq$ function.
 Type classes in Haskell are similar enough to Isabelle's type classes
 such that explicit handling of dictionaries can be avoided.
 
-The main disadvantage of our approach lies with lack of type
+The main disadvantage of our approach is the lack of type
 constructor classes. Anyway, it is possible to get around the
 obstacle, at least partially, by relying on an axiomatic
 characterisation of monads and on a proof-reuse strategy that actually
