typo git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8504 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/hs2isa.tex
+++ b/doc/hs2isa.tex
@@ -565,8 +565,8 @@ lemma map1_cons1[simp] : "map1 $$ f $$ (op ### $ x $ (xs::'a llist)) =
 done
 \end{verbatim}
 
-\noindent With these, it is now easy to prove that map distributes over
-composition via induction:
+\noindent With these, it is now easy to prove, via induction, that map
+distributes over composition:
 \begin{verbatim}
 theorem compMap : 
    "X_comp $$ (map1 $$ f) $$ (map1 $$ g) $$ x = 
