typos git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8506 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/doc/hs2isa.tex
+++ b/doc/hs2isa.tex
@@ -14,7 +14,7 @@
   Christian Maeder\inst{2}
   Till Mossakowski\inst{2}
 }
-\institute{Verimag, Grenoble, {\tt Paolo.Torrini@imag.fr} 
+\institute{Verimag Grenoble, {\tt Paolo.Torrini@imag.fr} 
 \and DFKI Lab Bremen, {\tt \{Christoph.Lueth,Christian.Maeder,Till.Mossakowski\}@dfki.de} }
 % \date{\today}
 
@@ -638,7 +638,7 @@ might make proofs easier.
 %On the other hand, the main novelty in our work is
 %to rely on theory morphisms and on their implementation for Isabelle in the
 %package AWE \cite{AWE}, in order to deal with special cases of monadic
-operator.
+%operator.
 % Currently Hets provides with an extension of the
 %base translation to Isabelle/HOL which uses AWE and covers state monad types
 %inclusive of \emph{do} notation.  Due to present limitations of AWE, this
